modules/gdscript/tests/scripts/analyzer/errors/script_freed_instance.gd
class A extends Node:
	pass

func test():
	var x = A.new()

	x.free()

	var ok = x
	var bad: A = x
